[gd_scene load_steps=4 format=3 uid="uid://blyl4jntf6crj"]

[ext_resource type="Texture2D" uid="uid://bv6ri74c3qbkq" path="res://laserBlue05.png" id="1_v7oki"]
[ext_resource type="Script" uid="uid://c2f66760ew6tm" path="res://bullet.gd" id="1_v8qja"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7oki"]
size = Vector2(4.999999, 6)

[node name="Bullet" type="Area2D"]
collision_mask = 3
script = ExtResource("1_v8qja")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5707964
texture = ExtResource("1_v7oki")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1.4999994)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_v7oki")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
